adding amazon book links

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="index.html">HOME<span class="sr-only">(current)</span></a>
                 </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="http://amg4d.org/">AMG4D</a>
+                    <a class="nav-link" href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">AMG4D</a>
                 </li>
                 <!--<li class="nav-item">
                     <a class="nav-link" href="#">AMG4D</a>
@@ -61,7 +61,7 @@
             <div class="col-sm-5 col-md-6">
                 <div class="text-center">
                 <img src="img/awakeNotHungry.jpg" class="rounded" alt="...">
-                    <a href="http://amg4d.org/">
+                    <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">
                     <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3">AMG4D.org<br>
                     The Adam and Matthew Group 4 Dads</button> 
                     </a>
@@ -84,7 +84,7 @@
                     every life.</p>
 
                     <div class="text-center mb-3">
-                    <small>Get the book for a $25 tax deductible donation to The Adam and Matthew Group 4 Dads. Click <a href="http://amg4d.org/"> HERE</a> for more information about us. The Adam and Matthew Group 4 Dads (amg4d is a 501c3 North Carolina Non-profit Corporation) </small>
+                    <small>Get the book for a $25 tax deductible donation to The Adam and Matthew Group 4 Dads. Click <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185"> HERE</a> for more information about us. The Adam and Matthew Group 4 Dads (amg4d is a 501c3 North Carolina Non-profit Corporation) </small>
                     </div>
                     
             </div>
