--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="text-center">
                 <img src="img/awakeNotHungry.jpg" class="rounded" alt="...">
                     <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">
-                    <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3">AMG4D.org<br>
+                    <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3"><br>
                     The Adam and Matthew Group 4 Dads</button> 
                     </a>
                 </div>
