--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Awake Not The Hungry</title>
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
-    crossorigin="anonymous">\
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
+        integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">\
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli:600i" rel="stylesheet">
@@ -22,104 +22,114 @@
 
 
 
-<!--Nav Bar-->
+    <!--Nav Bar-->
 
     <nav class="navbar navbar-toggleable-md navbar-light fixed-top " style="background-color: #e1e1e1">
-        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-            aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+            data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <a class="navbar-brand " href="index.html">Awake Not The Hungry</a>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav mr-auto">
-                <!--<li class="nav-item active">
-                    <a class="nav-link" href="index.html">HOME<span class="sr-only">(current)</span></a>
-                </li>-->
                 <li class="nav-item">
-                    <a class="nav-link" href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">AMG4D</a>
+                    <a class="nav-link"
+                        href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">AMG4D</a>
                 </li>
-                <!--<li class="nav-item">
-                    <a class="nav-link" href="#">AMG4D</a>
-                </li>-->
             </ul>
         </div>
     </nav>
 
-<!--Nav Bar END-->
+    <!--Nav Bar END-->
 
 
 
-<!--Main Content-->
+    <!--Main Content-->
 
     <div class="jumbotron">
         <h1 class="text-center ">Awake Not The Hungry</h1>
     </div>
 
-<div id="mainContent">
-    <div class="container">
-        <div class="row align-items-center">
-            <div class="col-sm-5 col-md-6">
-                <div class="text-center">
-                <img src="img/awakeNotHungry.jpg" class="rounded" alt="...">
-                    <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">
-                    <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3"><br>
-                    The Adam and Matthew Group 4 Dads</button> 
-                    </a>
+    <div id="mainContent">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-sm-5 col-md-6">
+                    <div class="text-center">
+                        <img src="img/awakeNotHungry.jpg" class="rounded" alt="...">
+                        <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">
+                            <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3">BUY THE BOOK</button>
+                        </a>
+                    </div>
+                    <div class="lead text-center contactInfo">To Contact us, learn more about amg4d, or get the book for
+                        a $25 donation send your request to po box 78574 Charlotte, NC 28271 <br> or call 704-408-6728
+                        or email mawulf@gmail.com </div>
                 </div>
-                <div class="lead text-center contactInfo">To Contact us, learn more about amg4d, or get the book for a $25 donation send your request to po box 78574 Charlotte, NC 28271 <br> or call 704-408-6728 or email mawulf@gmail.com </div>
-            </div>
-            <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
-                <h1 class="pb-4 pt-3 bodyHeading">The Story of <br> Matthew Wulf</h1>
-                <p class="lead">Imagine you are born deaf, blind, unable to speak, with doctors saying you will only live a few months. This
-                    is the life of Matthew Wulf. Imagine you are born deaf, blind, unable to speak, with doctors saying you
-                    will only live a few months. And then imagine sensing the hand of a loving God reaching toward you as
-                    if to say, "I have a purpose for your life, and I will be with you every day of your journey." Matthew
-                    Andreas Wulf struggled for life from birth with the rare disorder Zellweger's Syndrome. His body profoundly
-                    affected, he worked with tenacity to learn, to discover, to achieve, to live. As he reached up to grasp
-                    the hand of God in a hope that will amaze, Matthew kept a record of his writing over six years of his
-                    school life, showing his progression in both his learning and his faith. Out of this he formed this book,
-                    Awake Not The Hungry, as an effort to make his short life meaningful and inspiring to others who learn
-                    of him, and those who struggle with disabilities and challenges bigger than they are. Matthew wants most
-                    of all to share an unusual life that has developed his belief in the power of God and His purpose for
-                    every life.</p>
+                <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
+                    <h1 class="pb-4 pt-3 bodyHeading">The Story of <br> Matthew Wulf</h1>
+                    <p class="lead">Imagine you are born deaf, blind, unable to speak, with doctors saying you will only
+                        live a few months. This
+                        is the life of Matthew Wulf. Imagine you are born deaf, blind, unable to speak, with doctors
+                        saying you
+                        will only live a few months. And then imagine sensing the hand of a loving God reaching toward
+                        you as
+                        if to say, "I have a purpose for your life, and I will be with you every day of your journey."
+                        Matthew
+                        Andreas Wulf struggled for life from birth with the rare disorder Zellweger's Syndrome. His body
+                        profoundly
+                        affected, he worked with tenacity to learn, to discover, to achieve, to live. As he reached up
+                        to grasp
+                        the hand of God in a hope that will amaze, Matthew kept a record of his writing over six years
+                        of his
+                        school life, showing his progression in both his learning and his faith. Out of this he formed
+                        this book,
+                        Awake Not The Hungry, as an effort to make his short life meaningful and inspiring to others who
+                        learn
+                        of him, and those who struggle with disabilities and challenges bigger than they are. Matthew
+                        wants most
+                        of all to share an unusual life that has developed his belief in the power of God and His
+                        purpose for
+                        every life.</p>
 
                     <div class="text-center mb-3">
-                    <small>Get the book for a $25 tax deductible donation to The Adam and Matthew Group 4 Dads. Click <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185"> HERE</a> for more information about us. The Adam and Matthew Group 4 Dads (amg4d is a 501c3 North Carolina Non-profit Corporation) </small>
+                        <small>Get the book for a $25 tax deductible donation to The Adam and Matthew Group 4 Dads.
+                            Click <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">
+                                HERE</a> for more information about us. The Adam and Matthew Group 4 Dads (amg4d is a
+                            501c3 North Carolina Non-profit Corporation) </small>
                     </div>
-                    
+
+                </div>
             </div>
         </div>
     </div>
-</div> 
-<!--Main Content End-->
+    <!--Main Content End-->
 
 
 
-<!--Footer-->
+    <!--Footer-->
 
     <div class="container">
         <footer>
             <div class="row">
-            <!--<div class="col-md-6">
-                <p class="lead text-center footerText">Contact us at 704.605.2082  <br>
-                    po box 78574 Charlotte NC 28271</p>
-            </div>-->
-            <div class="col-12">
-                <p class="lead text-center footerText">&copy AwakeNotTheHungry.com</p>
-            </div>
+                <div class="col-12">
+                    <p class="lead text-center footerText">&copy AwakeNotTheHungry.com</p>
+                </div>
             </div>
         </footer>
     </div>
 
-<!--Footer End-->
+    <!--Footer End-->
 
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"
+        integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n"
         crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
+        integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
         crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
+        integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
         crossorigin="anonymous"></script>
 </body>
 
