--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <div class="text-center">
                         <img src="img/awakeNotHungry.jpg" class="rounded" alt="...">
                         <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">
-                            <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3">BUY THE BOOK</button>
+                            <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3"><br>BUY THE BOOK</button>
                         </a>
                     </div>
                     <div class="lead text-center contactInfo">To Contact us, learn more about amg4d, or get the book for
