--- a/index.html
+++ b/index.html
@@ -14,13 +14,10 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:600i" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Passion+One" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
-
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-
-
 
     <!--Nav Bar-->
 
@@ -43,8 +40,6 @@
 
     <!--Nav Bar END-->
 
-
-
     <!--Main Content-->
 
     <div class="jumbotron">
@@ -58,13 +53,16 @@
                     <div class="text-center">
                         <img src="img/awakeNotHungry.jpg" class="rounded" alt="...">
                         <a href="https://www.amazon.com/Awake-Hungry-Matthew-Andreas-Wulf/dp/1498486185">
-                            <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3"><br>BUY THE BOOK</button>
+                            <button type="button" class="btn btn-outline-primary btn-md mb-3 mr-3">BUY THE BOOK</button>
                         </a>
                     </div>
-                    <div class="lead text-center contactInfo">To Contact us, learn more about amg4d, or get the book for
+                    <br>
+                    <div class="lead text-center contactInfo">To Contact us, learn more about AMG4D, or get the book for
                         a $25 donation send your request to po box 78574 Charlotte, NC 28271 <br> or call 704-408-6728
                         or email mawulf@gmail.com </div>
-                </div>
+                    </div>
+
+                    
                 <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
                     <h1 class="pb-4 pt-3 bodyHeading">The Story of <br> Matthew Wulf</h1>
                     <p class="lead">Imagine you are born deaf, blind, unable to speak, with doctors saying you will only
